Bug 484466 - Kate crashes when opening any file inside Kate's Save File window
Summary: Kate crashes when opening any file inside Kate's Save File window
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (show other bugs)
Version: 23.08.4
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2024-03-25 18:37 UTC by 7b54ge7sw
Modified: 2024-03-27 09:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
New crash information added by DrKonqi (89.40 KB, text/plain)
2024-03-25 18:37 UTC, 7b54ge7sw
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 7b54ge7sw 2024-03-25 18:37:33 UTC
Application: kate (23.08.4)

Qt Version: 5.15.12
Frameworks Version: 5.114.0
Operating System: Linux 6.5.0-21-generic x86_64
Windowing System: X11
Distribution: KDE neon 5.27
DrKonqi: 5.27.10 [CoredumpBackend]

-- Information about the crash:
The following steps result in the crash every single time:

1. Open any file in Kate, can be a brand new file
2. Inside Kate open the "Save As" file explorer window
3. In the window right click any text file and select "Open with Kate"
4. Kate Crashes

The crash can be reproduced every time.

-- Backtrace (Reduced):
#6  __pthread_kill_implementation (no_tid=0, signo=6, threadid=139829445474752) at ./nptl/pthread_kill.c:44
#7  __pthread_kill_internal (signo=6, threadid=139829445474752) at ./nptl/pthread_kill.c:78
#8  __GI___pthread_kill (threadid=139829445474752, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
#9  0x00007f2c98c42476 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#10 0x00007f2c98c287f3 in __GI_abort () at ./stdlib/abort.c:79


Reported using DrKonqi
Comment 1 7b54ge7sw 2024-03-25 18:37:34 UTC
Created attachment 167752 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Waqar Ahmed 2024-03-25 21:34:46 UTC
Confirmed. can reproduce on latest master
Comment 3 Bug Janitor Service 2024-03-26 21:37:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/676
Comment 4 Christoph Cullmann 2024-03-27 09:46:29 UTC
Git commit 22ec108363ae5beea67163e63cd923c47376d004 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 27/03/2024 at 09:33.
Pushed by cullmann into branch 'master'.

Dont use activeView as save dialog parent

Active view can get deleted during dialog exec. It is also just a bad
idea to use the activeView imo. The new logic tries to use the
QApplication::activeWindow() first, then tries the
KTextEditor::MainWindow::window() and as a last fallback uses the
activeView.

M  +5    -3    src/document/katedocument.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/22ec108363ae5beea67163e63cd923c47376d004