Dont use activeView as save dialog parent

Active view can get deleted during dialog exec. It is also just a bad
idea to use the activeView imo. The new logic tries to use the
QApplication::activeWindow() first, then tries the
KTextEditor::MainWindow::window() and as a last fallback uses the
activeView.

BUG: 484466